2010-06-10  Stuart Caie  <kyzer@4u.net>

	* mspack: bugs in MS-ZIP and Quantum decoders have been fixed. See
	mspack/ChangeLog for full details.

2010-05-06  Stuart Caie  <kyzer@4u.net>

	* configure.ac, cabextract.c: added support for the one-arg mkdir()
	found in the MinGW32 environment. Thanks to Kevin O'Rourke for
	reporting this.
	
2009-09-24  Stuart Caie   <kyzer@4u.net>

	*  doc/wince_cab_format.html, src/wince_info, src/wince_rename:
	The files in Windows CE cabinets are numbered after the first
	ID in the FILES section, rather than what I termed the "real ID".
	Fixed the documentation and the wince tools to match. The purpose
	of the field previously called "real ID" is now unknown. Thanks
	to Marco Schindler for discovering this.

2007-08-07  Stuart Caie   <kyzer@4u.net>

	* all: cabextract and libmspack have moved to the domain
	www.cabextract.org.uk. Updated the documentation to reflect this.
	
2007-01-20  Stuart Caie   <kyzer@4u.net>

	* create_output_name(): add UTF-8 support for 6-byte characters.
	Apparently they go that far these days.

2007-01-20  Stuart Caie   <kyzer@4u.net>

	* doc/wince_cab_format.html, src/wince_info: The REGKEYS "unknown"
	flag appears to be a boolean indicating whether variable
	substitution should take place. Thanks to Dominique Gallot for
	discovering it.

2006-06-21  Stuart Caie   <kyzer@4u.net>

	* create_output_name(): add UTF-8 support for 4-byte characters.

2006-03-01  Stuart Caie   <kyzer@4u.net>

	* process_cabinets(): on the advice of Mike Mohr, cabextract no
	longer skips entire cabinets, when create_output_filename()
	returns NULL, it only skips the affected files now.

2005-10-30  Stuart Caie   <kyzer@4u.net>

	* src/cabextract.c: added test mode to cabextract, wherein files
	aren't extracted, only passed through an MD5 checksum generator.
	cabextract then lists which files passed and which files failed.

	* process_cabinets(): fixed the problem where filters don't match