@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: @PACKAGE@
+Description: Compressors and decompressors for Microsoft formats
+Version: @VERSION@
+Libs: -L${libdir} -lmspack
+Cflags: -I${includedir}
